# ifc-lite

./: .gitattributes  .gitignore  AGENTS.md  CLERK-REMOVAL.md  Cargo.toml  README.md  knip.json  mkdocs.yml  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  turbo.json  vercel.json
.changeset/: 3d-section-cap.md  annotation-billboard-grid-bubble-812.md  byok-trust-modal.md  cesium-placement-and-navigation.md  clash-detection.md  collab-final-integration.md  collab-seed-from-step.md  collab-server-room-tokens.md  csg-sequential-subtract-583.md  data-ifc-schema.md  diagonal-opening-reveals.md  door-handle-sor-674.md  extensions-authoring-pipeline.md  extensions-flavor-packer-and-mining.md  extensions-p1-ui-and-p2-authoring.md  extensions-phase-0.md  extensions-phase-1-activation.md  extensions-phase-1-runtime.md  extensions-phase-1-stage-a.md  extensions-phase-1-ui.md  extensions-phase-2-3-4-libraries.md  extensions-phase-3-4-completion.md  extensions-phase-5-signing.md  extensions-pr-690-review.md  feat-883-grid-placement.md  feat-manifold-wasm.md  fix-832-opening-poke-out-overcuts.md  fix-841-spatial-tree-cycle-guard.md  fix-842-bspline-surface-and-sphere.md  fix-843-server-2d-symbols.md  fix-845-wall-elemented-case-void-propagation.md  fix-846-revolved-area-solid-position-axis.md  fix-federation-unit-scale-and-worker-hang.md  fix-geometry-worker-url.md  fix-ifc-map-conversion-scale.md  fix-rebar-rendering-issue-631.md  geometry-controller-dynamic-import.md  glb-export-dialog-688.md  ids-document-auditing.md  ifc-annotation-overlay-653.md  (+30 more)
.depot/workflows/: desktop-compat.yml  docker.yml  test-templates.yml  test.yml
.github/: dependabot.yml
.github/workflows/: desktop-compat.yml  docker.yml  docs.yml  release.yml  sdk-canary.yml  server-binaries.yml  test-templates.yml  test.yml
apps/desktop/: package.json  vite.config.ts
apps/landing/: app.jsx  index.html  robots.txt  sitemap.xml  styles.css
apps/server/: Cargo.toml  Dockerfile
apps/viewer/: CHANGELOG.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/viewer-embed/: index.html  package.json  tsconfig.json
docs/: index.md
docs/api/: rust.md  wasm.md
docs/architecture/: clash-detection-implementation.md  clash-detection-plan.md  collab-plan.md  coordinate-handling.md  essen-multiuser-collab-plan.md  geometry-pipeline.md  single-controller-rayon-design.md  streaming-load-design.md
docs/contributing/: testing.md
docs/design/: level-display-modes.md
docs/guide/: browser-requirements.md  cli.md  desktop.md  extension-authoring.md  extensions.md  flavors.md  geometry.md  mutations.md  parsing.md  physics.md  privacy.md  quickstart.md  rendering.md
docs/tutorials/: extending-parser.md  threejs-integration.md
examples/babylonjs-viewer/: package.json  vite.config.ts
examples/collab-demo/: package.json  vite.config.ts
examples/threejs-collab/: package.json
examples/threejs-viewer/: package.json  vite.config.ts
rust/core/: Cargo.toml
rust/engine/: Cargo.toml
rust/engine/src/: lib.rs  physics.rs
rust/geometry/: Cargo.toml
rust/geometry/src/: alignment.rs  bsp_csg.rs  csg.rs  dedup.rs  diagnostics.rs  extrusion.rs  lib.rs  manifold_kernel.rs  profile_extractor.rs  profiles.rs  quantize.rs
rust/geometry/src/processors/: advanced.rs  advanced_face.rs  alignment.rs  boolean.rs  brep.rs  csg_primitive.rs  extrusion_tapered.rs  mapped.rs  mod.rs  sectioned.rs  swept.rs  tessellated.rs  tests.rs
rust/geometry/src/router/: clipping.rs  layers.rs  mod.rs  processing.rs  tests.rs  transforms.rs  voids.rs  zfight.rs
rust/geometry/tests/: bool_failure_test.rs  door_window_calibration_regression.rs  issue_582_583_regression_test.rs  issue_584_smiley_west_test.rs  issue_604_door_glass_zfight.rs  issue_604_door_regression.rs  issue_635_boolean_clipping_test.rs  issue_819_triangulated_normals.rs  issue_820_trimmed_curve_planeangleunit.rs  issue_821_difference_emptied_host.rs  issue_828_sectioned_solid_horizontal.rs  issue_832_opening_representations.rs  issue_841_house_stack_overflow.rs  issue_842_bspline_and_sphere.rs  issue_845_wall_elemented_case.rs  issue_846_revolved_beam.rs  issue_853_slab_pocket.rs  issue_859_linear_placement.rs  issue_883_grid_placement.rs  material_layers_test.rs  mesh_welding_calibration.rs  submesh_voids_test.rs  w410_fillet_profile_regression.rs  wall_opening_cut_regression.rs
rust/geometry/tests/fixtures/: issue_883_grid_placement.ifc.txt
rust/physics/: Cargo.toml
rust/physics/src/: lib.rs  simulate.rs  types.rs  world.rs
rust/processing/: Cargo.toml
rust/wasm-bindings/: Cargo.toml
rust/wasm-bindings/src/: lib.rs  quantized_scene.rs  zero_copy.rs
rust/wasm-bindings/src/api/: georef.rs  gpu_meshes.rs  mod.rs  quantized_meshes.rs  styling.rs  symbolic.rs  zero_copy_api.rs
scripts/: build-wasm.sh  debug-ar-geometry.mjs  debug-railing-geometry.mjs  fetch-prebuilt-wasm.mjs  run-build-wasm.mjs  test-coverage.cjs  test-geometry-reference.mjs  test-geometry-regression.mjs  test-ids-corpus.mjs  test-integration-pipeline.mjs  test-integration.mjs  test-wasm-contract.mjs  vercel-build.sh  vercel-ignore-build.sh  vercel-install.sh  verify-epsg-roundtrip.ts
scripts/fixtures/: build-manifest.mjs  fetch-fixtures.mjs  upload-fixtures.mjs
(+359 files in other folders)
