[package]
name = "ifc-lite-geometry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Geometry processing and mesh generation for IFC models"
keywords = ["ifc", "bim", "geometry", "mesh", "aec"]
categories = ["graphics", "parsing"]
readme = "../../README.md"

[features]
default = []
# Use the Manifold (https://github.com/elalish/manifold) C++ kernel for
# `subtract_mesh` / `union_mesh` / `intersection_mesh` instead of the
# legacy in-tree BSP port (`bsp_csg.rs`). Removes the 24-polygon operand
# cap and gives manifold-by-construction output. Off by default while the
# T1.1 migration (Sprint 2) is in flight; flip to default-on once
# regression fixtures and bundle-size budget land.
#
# Native (Linux/macOS/Windows) only at this gate; WASM support is gated
# separately by `manifold-csg-wasm-uu` so the bare-WASM provisional path
# stays opt-in.
manifold-csg = ["dep:manifold-csg"]
# Enable Manifold on `wasm32-unknown-unknown` (provisional support per
# upstream — no exception runtime, no threading, requires LLVM 20+).
# Implies `manifold-csg`.
manifold-csg-wasm-uu = ["manifold-csg", "manifold-csg/unstable-wasm-uu"]
debug_geometry = []

[dependencies]

# Triangulation
earcutr = "0.4"

# 2D polygon boolean operations for profile-level void subtraction
i_overlay = "1.9"

# Core IFC parsing
ifc-lite-core.workspace = true

# Math library
nalgebra = { version = "0.33", default-features = false, features = ["std"] }

# Parallel processing
rayon = "1.10"

# Fast hashing
rustc-hash = "1.1"

# Small vector optimization for frequently allocated small collections
smallvec = "1.13"

# Error handling
thiserror = "1.0"

# Optional Manifold CSG kernel (T1.1). Off by default; see the
# `manifold-csg` feature above for the activation contract.
# `default-features = false` drops TBB-backed parallelism, which doesn't
# work on WASM anyway and isn't required for correctness on native.
manifold-csg = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
approx = "0.5"

[[example]]
name = "color_extraction_test"
path = "examples/color_extraction_test.rs"
